# textbox

./: Cargo.toml  LICENSE.md  README.md
src/: component.rs  error.rs  lib.rs
src/imagearea/: mod.rs
src/render/: mod.rs  value.rs
src/textarea/: align.rs  draw.rs  lines.rs  mod.rs  size.rs
src/textarea/text/: char.rs  error.rs  formatting.rs  mod.rs  node.rs  split.rs  text_ops.rs
