[package]
name = "textbox"
description = "An elegant utility for slotting text/images into named slots in templates."
license = "MIT"
repository = "https://github.com/Ersox/textbox"
authors = [ "Ersox" ]
version = "0.5.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
image = "0.25.9"
imageproc = "0.25.0"
markdown = "1.0.0"
pixelset = "0.6.2"
thiserror = "2.0.17"
